--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,6 @@ jobs:
       - run: docker login -u="${DOCKER_REGISTRY_USERNAME}" -p="${DOCKER_REGISTRY_PASSWORD}"
       - run: make ci:diff
       - run: make ci:diff | while read DIR; do cd ${CIRCLECI_WORKSPACE}/${DIR} && make build; done
-      - run: make ci:diff | while read DIR; do cd ${CIRCLECI_WORKSPACE}/${DIR} && make push; done
       - run:
           name: notification failed
           command: |
@@ -167,9 +166,9 @@ workflows:
           context: "chatwork_api_token@circleci"
           requires:
             - test
-          filters:
-            branches:
-              only: master
+          #filters:
+            #branches:
+              #only: master
 
   update_dependecies:
     jobs:
