--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,25 @@ jobs:
       - run: docker version
       - run: docker login -u="${DOCKER_REGISTRY_USERNAME}" -p="${DOCKER_REGISTRY_PASSWORD}"
       - run: make ci:diff
-      - run: make ci:diff | while read DIR; do cd ${CIRCLECI_WORKSPACE}/${DIR} && make build; done
+      - run:
+          command: |
+            ARCH=`uname -m`;
+
+            case ${ARCH} in
+              ("arm64"|"aarch64") EXTENSION=".arm64v8"; ;;
+              ("x86_64") EXTENSION=""; ;;
+              (*) EXTENSION=$(ARCH); ;;
+            esac
+
+            make ci:diff | while read DIR; do
+              cd ${CIRCLECI_WORKSPACE}/${DIR}
+              if find . -type f -name "Dockerfile*${EXTENSION}" | grep Dockerfile ; then
+                make build;
+              else
+                echo "${DIR} is ${ARCH} not supported. make build & make test was skipped.";
+              fi
+            done
+
       - run:
           name: notification failed
           command: |
