--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,7 +95,7 @@ jobs:
             make ci:diff | xargs -I{} /bin/bash -c '
               version=$(docker inspect -f {{.Config.Labels.version}} chatwork/{});
               changelog=$(make ci:changelog -e DIR="{}/");
-              make ci:notify -e TITLE="Release chatwork/{}:${version} (gogo)" \
+              make ci:notify -e TITLE="Release chatwork/{}:${version} arch: $(make arch) (gogo)" \
                              -e BODY="$(echo -e "changelog\n${changelog}")";
             '
           when: on_success
