--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,16 +96,15 @@ jobs:
             ARCH=`make arch`
             EXTENSION=`make extension`
 
-            make ci:diff | xargs -I{} /bin/bash -c '
-              if find ${CIRCLECI_WORKSPACE}/{} -type f -name "Dockerfile${EXTENSION}" | grep Dockerfile ; then
-                version=$(docker inspect -f {{.Config.Labels.version}} chatwork/{});
-                changelog=$(make ci:changelog -e DIR="{}/");
-                make ci:notify -e TITLE="Release chatwork/{}:${version} arch: $(make arch) (gogo)" \
-                                             -e BODY="$(echo -e "changelog\n${changelog}")";
-              else
-                echo "{} is ${ARCH} not supported. docker push was skipped.";
-              fi
-            '
+            make ci:diff | while read DIR; do
+            if find ${CIRCLECI_WORKSPACE}/${DIR} -type f -name "Dockerfile${EXTENSION}" | grep Dockerfile ; then
+              version=$(docker inspect -f {{.Config.Labels.version}} chatwork/${DIR});
+              changelog=$(make ci:changelog -e DIR="${DIR}/");
+              make ci:notify -e TITLE="Release chatwork/${DIR}:${version} arch: $(make arch) (gogo)" \
+                                              -e BODY="$(echo -e "changelog\n${changelog}")";
+            else
+              echo "chatwork/${DIR} is ${ARCH} not supported. docker push was skipped.";
+            fi
           when: on_success
   mod:
     docker:
