--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,9 +97,11 @@ jobs:
             EXTENSION=`make extension`
 
             make ci:diff | while read DIR; do
-            if find ${CIRCLECI_WORKSPACE}/${DIR} -type f -name "Dockerfile${EXTENSION}" | grep Dockerfile ; then
+            if find ./${DIR} -type f -name "Dockerfile${EXTENSION}" | grep Dockerfile ; then
               version=$(docker inspect -f {{.Config.Labels.version}} chatwork/${DIR});
+              echo "version: ${version}"
               changelog=$(make ci:changelog -e DIR="${DIR}/");
+              echo "changelog: ${changelog}"
               make ci:notify -e TITLE="Release chatwork/${DIR}:${version} arch: $(make arch) (gogo)" \
                                               -e BODY="$(echo -e "changelog\n${changelog}")";
             else
