fix push on_fail message.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,17 +78,27 @@ jobs:
       - run:
           name: notification failed
           command: |
-            make ci:diff | xargs -I{} /bin/bash -c '
-              version=$(docker inspect -f "{{.Config.Labels.version}}" chatwork/{});
-              if [ "$(docker inspect --format="{{json .RepoDigests}}" chatwork/{}:${version})" != "[]" ]; then
-                changelog=$(make ci:changelog -e DIR="{}/");
-                make ci:notify -e TITLE="Release chatwork/{}:${version} arch: $(make arch) (gogo)" \
-                               -e BODY="$(echo -e "changelog\n${changelog}")";
+            ARCH=`make arch`
+            EXTENSION=`make extension`
+
+            make ci:diff | while read DIR; do
+              if find ./${DIR} -type f -name "Dockerfile${EXTENSION}" | grep Dockerfile ; then
+
+                version=$(docker inspect -f "{{.Config.Labels.version}}" chatwork/${DIR});
+                if [ "$(docker inspect --format="{{json .RepoDigests}}" chatwork/${DIR}:${version})" != "[]" ]; then
+                  changelog=$(make ci:changelog -e DIR="${DIR}/");
+                  make ci:notify -e TITLE="Release chatwork/${DIR}:${version} arch: $(make arch) (gogo)" \
+                                      -e BODY="$(echo -e "changelog\n${changelog}")";
+                else
+                  make ci:notify -e TITLE="CircleCI: Failed push chatwork/${DIR}:${version} arch: $(make arch) (devil)" \
+                                      -e BODY="$(git log -1 --pretty=format:"%h - %an : %s" ${CIRCLE_BRANCH})";
+                fi
+
               else
-                make ci:notify -e TITLE="CircleCI: Failed push chatwork/{}:${version} arch: $(make arch) (devil)" \
-                               -e BODY="$(git log -1 --pretty=format:"%h - %an : %s" ${CIRCLE_BRANCH})";
+                echo "chatwork/${DIR} is ${ARCH} not supported. docker push was skipped.";
               fi
-            '
+            done
+
           when: on_fail
       - run:
           name: notification success
@@ -108,7 +118,7 @@ jobs:
                echo "chatwork/${DIR} is ${ARCH} not supported. docker push was skipped.";
              fi
             done
-            
+
           when: on_success
   mod:
     docker:
