add version tag to Dockerfile.

--- a/dgoss/Dockerfile.arm64v8
+++ b/dgoss/Dockerfile.arm64v8
@@ -1,14 +1,17 @@
 FROM docker:20.10.7
 
-ENV GOSS_VERSION=v0.3.16
+ARG GOSS_VERSION="0.3.16"
+
+LABEL version="${GOSS_VERSION}"
+LABEL maintainer="shinohara@chatwork.com"
 
 RUN ARCH="$(apk --print-arch)" \
     && case "${ARCH}" in \
         arm64|aarch64) \
-            GOSS_URL="https://github.com/aelsabbahy/goss/releases/download/${GOSS_VERSION}/goss-linux-arm" \
+            GOSS_URL="https://github.com/aelsabbahy/goss/releases/download/v${GOSS_VERSION}/goss-linux-arm" \
             ;; \
         amd64|x86_64) \
-            GOSS_URL="https://github.com/aelsabbahy/goss/releases/download/${GOSS_VERSION}/goss-linux-amd64" \
+            GOSS_URL="https://github.com/aelsabbahy/goss/releases/download/v${GOSS_VERSION}/goss-linux-amd64" \
             ;; \
         *) \
             echo "Unsupported architecture: ${ARCH}" \
@@ -18,7 +21,7 @@ RUN ARCH="$(apk --print-arch)" \
     && apk add --no-cache bash \
     && apk add --no-cache bash \
     && wget $GOSS_URL -O /usr/local/bin/goss \
-    && wget https://github.com/aelsabbahy/goss/releases/download/${GOSS_VERSION}/dgoss -O /usr/local/bin/dgoss \
+    && wget "https://github.com/aelsabbahy/goss/releases/download/v${GOSS_VERSION}/dgoss" -O /usr/local/bin/dgoss \
     && chmod +rx /usr/local/bin/goss /usr/local/bin/dgoss
 
 ENTRYPOINT ["dgoss"]
