use other method.

--- a/dgoss/Makefile
+++ b/dgoss/Makefile
@@ -1,19 +1,34 @@
 ARCH:=$(shell uname -m)
-EXTENSION:=$(shell case "$(ARCH)" in \
-	("arm64"|"aarch64") echo ".arm64v8" ;; \
-	("x86_64") echo "" ;; \
-	(*) echo $(ARCH) ;; \
+TAG:=$(shell case `uname -m` in \
+	("arm64"|"aarch64") echo "arm64" ;; \
+    ("x86_64") echo "amd64" ;; \
+    (*) echo $(ARCH) ;; \
 esac)
 
 .PHONY: build
 build:
-	$(shell find . -type f -name "Dockerfile*${EXTENSION}" | while read -r FILE; do \
-  		docker build -f $$FILE -t chatwork/`basename $$PWD` .; \
-  		version=$$(docker inspect -f {{.Config.Labels.version}} chatwork/`basename $$PWD`); \
-  		if [ -n "$$version" ]; then \
-          docker tag chatwork/`basename $$PWD`:latest chatwork/`basename $$PWD`:$$version; \
-        fi \
-	done)
+	@case $(ARCH) in \
+		("all") \
+			docker build -f Dockerfile -t chatwork/`basename $$PWD`:amd64 .; \
+			docker build -f Dockerfile.arm64v8 -t chatwork/`basename $$PWD`:arm64 .; \
+            break ;; \
+		("arm64"|"aarch64") \
+			docker build -f Dockerfile.arm64v8 -t chatwork/`basename $$PWD`:arm64 .; \
+			break ;; \
+		("x86_64")  \
+			docker build -f Dockerfile -t chatwork/`basename $$PWD`:amd64 .; \
+			break ;; \
+		(*) \
+			echo "arch: $(ARCH) is not supported."; \
+			exit 1; \
+			break ;; \
+	esac
+
+	@version=$$(docker inspect -f {{.Config.Labels.version}} chatwork/`basename $$PWD`:${TAG}); \
+    if [ -n "$$version" ]; then \
+    	docker tag chatwork/`basename $$PWD`:${TAG} chatwork/`basename $$PWD`:$$version; \
+    	docker tag chatwork/`basename $$PWD`:${TAG} chatwork/`basename $$PWD`; \
+    fi
 
 .PHONY: check
 check:
@@ -36,5 +51,12 @@ push:
 		if docker inspect --format='{{index .RepoDigests 0}}' chatwork/$$(basename $$PWD):$$version >/dev/null 2>&1; then \
 			echo "no changes"; \
 		else \
-			docker push chatwork/`basename $$PWD`; \
+			docker push chatwork/`basename $$PWD`:$$version-amd64; \
+			docker push chatwork/`basename $$PWD`:$$version-arm64; \
+
+			docker manifest create chatwork/`basename $$PWD`:$$version chatwork/`basename $$PWD`:$$version-amd64 chatwork/`basename $$PWD`:$$version-arm64; \
+			docker manifest push chatwork/`basename $$PWD`:$$version \
+
+			docker manifest create chatwork/`basename $$PWD` chatwork/`basename $$PWD`:$$version-amd64 chatwork/`basename $$PWD`:$$version-arm64; \
+			docker manifest push chatwork/`basename $$PWD` \
 		fi
