update マルチビルドに対応したflyway migrate用のimageを作る

--- a/fluent-bit/Dockerfile
+++ b/fluent-bit/Dockerfile
@@ -1,22 +1,7 @@
-ARG FLUENTBIT_VERSION="1.8.7"
+ARG FLUENTBIT_VERSION="1.8.8"
 ARG FLUENTBIT_SUFFIX
 
-
-FROM golang:1.14.0-buster AS fluent-bit-go-s3
-
-ARG FLUENTBIT_GO_S3_VERSION="0.7.2"
-
-ENV CGO_ENABLED=1
-ENV GOOS=linux
-ENV GOARCH=amd64
-ENV GOPATH=/go
-
-RUN git clone --branch v${FLUENTBIT_GO_S3_VERSION} --single-branch https://github.com/cosmo0920/fluent-bit-go-s3.git /go/src/github.com/cosmo0920/fluent-bit-go-s3 \
-    && cd /go/src/github.com/cosmo0920/fluent-bit-go-s3 \
-    && make build
-
-
-FROM golang:1.12-buster AS amazon-cloudwatch-logs-for-fluent-bit
+FROM golang:1.17-buster AS amazon-cloudwatch-logs-for-fluent-bit
 
 ARG FLUENTBIT_CLOUDWATCH_LOGS_VERSION="1.6.3"
 
@@ -31,17 +16,14 @@ RUN go get -u golang.org/x/lint/golint \
     && cd /go/src/github.com/aws/amazon-cloudwatch-logs-for-fluent-bit \
     && make build
 
-
 FROM fluent/fluent-bit:${FLUENTBIT_VERSION}${FLUENTBIT_SUFFIX}
 
-ARG FLUENTBIT_VERSION="1.8.7"
-ARG FLUENTBIT_GO_S3_VERSION="0.7.2"
+ARG FLUENTBIT_VERSION="1.8.8"
 ARG FLUENTBIT_CLOUDWATCH_LOGS_VERSION="1.6.3"
 
-LABEL version="${FLUENTBIT_VERSION}-${FLUENTBIT_GO_S3_VERSION}-${FLUENTBIT_CLOUDWATCH_LOGS_VERSION}"
+LABEL version="${FLUENTBIT_VERSION}-${FLUENTBIT_CLOUDWATCH_LOGS_VERSION}"
 LABEL maintainer="ozaki@chatwork.com"
 
-COPY --from=fluent-bit-go-s3 /go/src/github.com/cosmo0920/fluent-bit-go-s3/out_s3.so /usr/lib/x86_64-linux-gnu/
 COPY --from=amazon-cloudwatch-logs-for-fluent-bit /go/src/github.com/aws/amazon-cloudwatch-logs-for-fluent-bit/bin/cloudwatch.so /usr/lib/x86_64-linux-gnu/
 
 EXPOSE 2020
